<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_margin="20dp">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginEnd="@dimen/margin"
        android:hint="@string/hint_uname"
        android:inputType="text"
        android:text=""
        android:selectAllOnFocus="true"
        android:autofillHints="@string/hint_uname" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margindp"
        android:layout_marginEnd="@dimen/margin"
        android:hint="@string/hint_password"
        android:text=""
        android:imeActionLabel="@string/action_login"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="end"
        android:enabled="true"
        android:text="@string/action_login"
        android:visibility="visible"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/touchID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/touch_id"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/validateResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@android:color/holo_red_light"
        />
    </LinearLayout>
</RelativeLayout>
